Added global exception handler with standardized error response format